name:                aeson-smart
version:             0.2.1.0
synopsis:            Smart derivation of Aeson instances
description:         Aeson-smart generates ToJSON and FromJSON instances that ignore extra fields
                     and fill in missing fields with default values.
homepage:            https://github.com/janminarik/aeson-smart
license:             MIT
author:              Sam Anklesaria <amsay@amsay.net>
maintainer:          Jan Minarik <jan@minarik.net>
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >=1.8
source-repository head
  type:     git
  location: git://github.com/janminarik/aeson-smart.git

library
  exposed-modules:     Data.Aeson.TH.Smart, Data.Default.TH
  -- other-modules:
  build-depends:       base >= 4.5 && < 5,
                       aeson >= 0.6,
                       data-default,
                       unordered-containers,
                       template-haskell,
                       text,
                       vector
